--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "circle-to-polygon": "^2.2.0",
+    "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^3.4.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "read-excel-file": "^5.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
